objects/L2I_Aircraft_Order__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>This Date field is used to update Child Aircraft Services if they are not already Activated.</description>
        <inlineHelpText>Update this field to activate all Aircraft Services for this Aircraft Order, Aircraft Services not activated already will be activated with the date and time entered here.</inlineHelpText>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft</label>
        <referenceTo>L2I_Aircraft__c</referenceTo>
        <relationshipLabel>Aircraft Orders</relationshipLabel>
        <relationshipName>Aircraft_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <description>This date is used to update Deactivation date on Aircraft Service records, if Aircraft Service Record is active and deactivation date on aircraft service record is empty and Activation date on Aircraft Service record is less then Deactivation Date.</description>
        <inlineHelpText>This is used to update Deactivation date on Aircraft Service records, if Aircraft Service Record is active and deactivation date on aircraft service record is empty and Activation date on Aircraft Service record is less then Deactivation Date.</inlineHelpText>
        <label>Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalRequestID__c</fullName>
        <label>ExternalRequestID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalTaskID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalTaskID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Aircraft Orders</relationshipLabel>
        <relationshipName>Aircraft_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category2__c</fullName>
        <formula>Order__r.L2I_Product_Category_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Now_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Now Notified</label>
        <type>Checkbox</type>
    </fields>
    <label>Aircraft Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AO{0000}</displayFormat>
        <label>Aircraft Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aircraft Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Activation_Deactivation_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>( $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; 
	 $Profile.Name &lt;&gt; &quot;PAC System Administrator&quot; &amp;&amp; 
	 $Profile.Name &lt;&gt; &quot;PAC Integration&quot; )
&amp;&amp; 
( ( ISCHANGED(Activation_Date__c) &amp;&amp;
		  (TODAY() - DATEVALUE(Activation_Date__c) &gt;7)
			)
  || 
	 ( ISCHANGED(Deactivation_Date__c) &amp;&amp;
		  (TODAY() - DATEVALUE(Deactivation_Date__c) &gt;7)
		)
)</errorConditionFormula>
        <errorMessage>Activation Date or Deactivation Date cannot be set older then 7 days.</errorMessage>
    </validationRules>
</CustomObject>